--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,5 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<% provide(:title, "Help") %>
+<h1>Help</h1>
+<p>Get help by visiting your local physician or by <a href="http://how-to-meditate.org">meditating</a>.
+</p>
+
