Add full_title helper

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,2 @@
-<% provide(:title, "Home") %>
-<h1>Twitlike</h1>
+<h1>Home Twitlike</h1>
 <p>This is the home page for the Twitlike application.</p>
