--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Home Twitlike</h1>
-<p>This is the home page for the Twitlike application.</p>
+<div class="center jumbotron">
+  <h1> Welcome to Twitlike</h1>
+  <h2> This is the home page for the Twitlike application. </h2>
+  <%= link_to "Sign up", '#', class: "btn btn-lg btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails logo"), 'http://rubyonrails.org/' %>
