--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,10 @@
       <h1>
         <%= gravatar_for @user %>
         <%= @user.name %>
+        <% if current_user.admin? && !current_user?(@user) %>
+          | <%= link_to "Delete", @user, method: :delete,
+                                        data: { confirm: "Are you sure?" } %>
+        <% end %>
       </h1>
     </section>
   </aside>
