--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
       <h1>
         <%= gravatar_for @user %>
         <%= @user.name %>
-        <% if current_user.admin? && !current_user?(@user) %>
+        <% if current_user && current_user.admin? && !current_user?(@user) %>
           | <%= link_to "Delete", @user, method: :delete,
                                         data: { confirm: "Are you sure?" } %>
         <% end %>
