Add micropost to User Show view.. still needs test

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, "Users") %>
 <h1>All users</h1>
 
-<%= will_paginate %>
+<%= will_paginate %> <!-- Assumes the existence of isntance variable called @users -->
 <ul class="users">
   <!--
   <% @users.each do |user| %>
