--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <% if logged_in? %>
-  <%= render 'home_logged_in' %>
+  <%= render 'static_pages/home_logged_in' %>
 <% else %>
-  <%= render 'home_sign_up' %>
+  <%= render 'static_pages/home_sign_up' %>
 <% end %>
